--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,153 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <title>Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="193" height="38" alt="Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+             <li class="site-list__item site-list__item--active">
+               <a>Главная
+               </a>
+             </li>
+             <li class="site-list__item">
+               <a href="catalog.html">Каталог продукции
+               </a>
+             </li>
+             <li class="site-list__item">
+               <a href="form.html">Подбор программы
+               </a>
+             </li>
+           </ul>
+         </div>
+       </nav>
+     </header>
+     <main class="page-main">
+       <section class="main">
+         <h1> Функциональное питание для котов
+         </h1>
+         <p class="main__slogan"> Занялся собой? Займись котом!
+         </p>
+       </section>
+       <section class="programs">
+         <h2 class="visually-hidden">Программы
+         </h2>
+         <button class="page-main__toggle" type="button">Подобрать программу
+         </button>
+         <ul class="programs__list">
+           <li class="programs__item programs__item--slim">
+             <h3 class="page-main__title">Похудение
+             </h3>
+             <p class="programs-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+             </p>
+             <p class="programs__link programs__link--arrow"> Каталог Slim
+             </p>
+           </li>
+           <li class="programs__item programs__item--pro">
+             <h3 class="page-main__title">Набор массы
+             </h3>
+             <p class="programs-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+             </p>
+             <p class="programs__link programs__link--arrow"> Каталог Pro
+             </p>
+           </li>
+         </ul>
+       </section>
+       <section class="work">
+         <h2 class="title">Как это работает?
+         </h2>
+         <ul class="work__list">
+           <li class="work__item work__item--substance">
+             <p class="work__description">Функциональное питание содержит только полезные питательные вещества.
+             </p>
+           </li>
+           <li class="work__item work__item--water">
+             <p class="work__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+             </p>
+           </li>
+           <li class="work__item work__item--food">
+             <p class="work__description">Замените один-два приема обычной еды на наше функциональное питание.
+             </p>
+           </li>
+           <li class="work__item work__item--time">
+             <p class="work__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+             </p>
+           </li>
+         </ul>
+       </section>
+       <section class="example">
+         <h2 class="title">Живой пример
+         </h2>
+         <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+         </p>
+         <ul class="example__list">
+           <li class="example__item--weight">5 кг
+           </li>
+           <li class="example__item">снижение веса
+           </li>
+         </ul>
+         <ul class="example__list">
+           <li class="example__item--days">60 дней
+           </li>
+           <li class="example__item">затрачено времени
+           </li>
+         </ul>
+         <p class="example__text">Затраты на питание: 15 000 руб.
+         </p>
+         <div class="example__wrapper slider">
+           <ul class="example__list slider__list">
+             <li class="example__item slider__item--fat"><img class="example__image" src="https://via.placeholder.com/150x150" alt="Толстый кот">
+             </li>
+             <li class="example__item slider__item--thin"><img class="example__image" src="https://via.placeholder.com/150x150" alt="Худой кот">
+             </li>
+           </ul>
+           <p>
+             <button>Было
+             </button>
+             <button>Стало
+             </button>
+           </p>
+         </div>
+       </section>
+     </main>
+     <footer class="page-footer">
+       <div class="page-footer__wrapper">
+         <div class="page-footer__contacts contacts">
+           <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+           <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+           </p>
+         </div>
+         <div class="page-footer__map">
+           <img class="page-footer__map-image" src="https://via.placeholder.com/150x150" alt="Карта">
+         </div>
+         <div class="page-footer__logo">
+           <img class="page-footer__logo-image" src="https://via.placeholder.com/150x150" width="131" height="38" alt="Кэт энерджи">
+         <div class="page-footer__social social">
+           <ul class="social__list">
+             <li class="social__item">
+               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Вконтакте</a>
+             </li>
+             <li class="social__item">
+               <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Инстаграм</a>
+             </li>
+             <li class="social__item">
+               <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Фейсбук</a>
+             </li>
+           </ul>
+         </div>
+         <div class="page-footer__copyright copyright">
+           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+           <img class="page-footer__image" src="https://via.placeholder.com/150x150" alt="HTML Academy">
+         </div>
+       </div>
+     </div>
+     </footer>
   </body>
 </html>
